GNOME Bugzilla – Bug 786584
thumbnailer: Fix left-over files in /tmp
Last modified: 2017-08-22 11:10:15 UTC
.
Created attachment 358098 [details] [review] thumbnailer: Fix left-over files in /tmp The fd that bwrap copies from the --file argument needs to be cleaned up as well, otherwise the temporary file as well as the directory containing it will be left on disk.
Christian, does that fix your problem? See also the related bug 786586.
Created attachment 358132 [details] [review] thumbnailer: Fix left-over files in /tmp The fd that bwrap copies from the --file argument needs to be cleaned up as well, otherwise the temporary file as well as the directory containing it will be left on disk.
Attachment 358132 [details] pushed as 6013e76 - thumbnailer: Fix left-over files in /tmp