thumbnailer: Fix left-over files in /tmp

The fd that bwrap copies from the --file argument needs to be cleaned up
as well, otherwise the temporary file as well as the directory
containing it will be left on disk.

https://bugzilla.gnome.org/show_bug.cgi?id=786584